--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "framer-motion": "^11.18.2",
     "lucide-react": "^0.371.0",
     "moment": "^2.30.1",
+    "motion": "^12.5.0",
     "next": "14.2.2",
     "next-themes": "^0.3.0",
     "openai": "^4.52.7",
@@ -33,7 +34,7 @@
     "react-dom": "^18",
     "recharts": "^2.12.5",
     "sonner": "^1.4.41",
-    "tailwind-merge": "^2.4.0",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
